--- a/intelligent_basket/pubspec.yaml
+++ b/intelligent_basket/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  awesome_dialog: ^1.2.1
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
