--- a/intelligent_basket/pubspec.yaml
+++ b/intelligent_basket/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   awesome_dialog: ^1.2.1
   cupertino_icons: ^1.0.0
+  hive: ^1.4.4+1
 
 dev_dependencies:
   flutter_test:
